--- a/angular-JavaLearn/src/app/header/header.component.html
+++ b/angular-JavaLearn/src/app/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button class="btn btn-dark navbtn" type="button" href="/" >JavaLearn</button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active navbtn" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active navbtn" href="/signup">Register</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
