--- a/angular-JavaLearn/src/app/header/header.component.html
+++ b/angular-JavaLearn/src/app/header/header.component.html
@@ -1,15 +1,18 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="btn btn-dark navbtn" type="button" href="/" >JavaLearn</button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active navbtn" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active navbtn" href="/signup">Register</a>
-        </li>
-      </ul>
+
+  <nav class="navbar sticky-top navbar-expand navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="btn btn-dark navbtn" type="button" href="/" >JavaLearn</button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active navbtn float" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active navbtn float" routerLink="/signup">Register</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+
+<router-outlet></router-outlet>
