--- a/angular-JavaLearn/src/app/auth/signup/signup.component.html
+++ b/angular-JavaLearn/src/app/auth/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h4>Register</h4>
-    <form [formGroup]="signupForm">
+    <form [formGroup]="signupForm" (ngSubmit)="signup()">
       <div class="form-group">
           <label for="inputUsername">Username</label>
           <input type="text" class="form-control" [formControlName]="'username'" id="username">
@@ -25,7 +25,7 @@
           </small>
           <small class="form-text text-muted">Something super secure.</small>
         </div>
-        <div class="text-center">
+        <div type="submit" class="text-center">
             <button type="submit" class="btn btn-primary ">Submit</button>
         </div>
     </form>
