implemented login in Angular app

--- a/angular-JavaLearn/src/styles.css
+++ b/angular-JavaLearn/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.form-group, .btn-primary{
+    margin-top: 10px;
+}
+
+h4 {
+    margin-top: 20px;
+    text-align: center;
+}
+
+input.ng-invalid.ng-touched {
+    border: 1px solid red;
+}
