--- a/angular-JavaLearn/src/app/auth/login/login.component.html
+++ b/angular-JavaLearn/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h4>Login</h4>
-    <form [formGroup]="loginForm">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="text" class="form-control" [formControlName]="'username'" id="inputUsername" aria-describedby="username">
@@ -15,8 +15,8 @@
             Required.<br>
           </small>
         </div>
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary ">Submit</button>
-        </div>
+        <div type="submit" class="text-center">
+          <button type="submit" class="btn btn-primary ">Submit</button>
+      </div>
     </form>
 </div>
