bugfixed forms validation

--- a/angular-JavaLearn/src/app/auth/login/login.component.html
+++ b/angular-JavaLearn/src/app/auth/login/login.component.html
@@ -16,7 +16,7 @@
           </small>
         </div>
         <div type="submit" class="text-center">
-          <button type="submit" class="btn btn-primary ">Submit</button>
+          <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
       </div>
     </form>
 </div>
