--- a/angular-JavaLearn/src/app/auth/signup/signup.component.html
+++ b/angular-JavaLearn/src/app/auth/signup/signup.component.html
@@ -25,8 +25,8 @@
           </small>
           <small class="form-text text-muted">Something super secure.</small>
         </div>
-        <div type="submit" class="text-center">
-            <button type="submit" class="btn btn-primary ">Submit</button>
+        <div type="submit" class="text-center" >
+            <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Submit</button>
         </div>
     </form>
 </div>
