--- a/angular-JavaLearn/src/app/home/home.component.html
+++ b/angular-JavaLearn/src/app/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+
+<div class="row">
+    <div class="smallColumn"></div>
+    <div class="column">
+        <h1>JavaLearn</h1>
+        <h3>A convenient way to learn new skills!</h3>
+        <div class="row">
+            <div class="column">
+                <h4>With us you will be able to:</h4>
+                <h5>&#8226; follow your progress in your profile</h5>
+                <h5>&#8226; take part in different topics lessons</h5>
+                <h5>&#8226; plan your learning path</h5>
+            </div>
+            <div class="column">
+                <img src="assets/img/bed-smaller.png"/>
+            </div>
+        </div>
+    </div>
+    <div class="column"></div>
+</div>
+<div class="end">
+    <div class="row"></div>
+    <h1 >Join us today!</h1>
+    <button class="btn btn-light btn-lg btn-huge" type="button" routerLink="/signup" >Register!</button>
+    <p>Made by github.com/rm46627</p>
+</div>
