--- a/angular-JavaLearn/src/app/auth/login/login.component.html
+++ b/angular-JavaLearn/src/app/auth/login/login.component.html
@@ -1,22 +1,28 @@
-<div class="container">
-    <h4>Login</h4>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
-        <div class="form-group">
-            <label for="inputUsername">Username</label>
-            <input type="text" class="form-control" [formControlName]="'username'" id="inputUsername" aria-describedby="username">
-            <small *ngIf="!loginForm.get('username')?.valid && loginForm.get('username')?.touched">
-              Required.<br>
-            </small>
-          </div>
-        <div class="form-group">
-          <label for="inputPassword">Password</label>
-          <input type="password" class="form-control" [formControlName]="'password'" id="inputPassword">
-          <small *ngIf="!loginForm.get('password')?.valid && loginForm.get('password')?.touched">
-            Required.<br>
-          </small>
-        </div>
-        <div type="submit" class="text-center">
-          <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
+<div class="row">
+  <div class="smallColumn"></div>
+  <div class="column">
+      <h4>Login</h4>
+      <div class="row">
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
+              <div class="form-group">
+                  <label for="inputUsername">Username</label>
+                  <input type="text" class="form-control" [formControlName]="'username'" id="inputUsername" aria-describedby="username">
+                  <small *ngIf="!loginForm.get('username')?.valid && loginForm.get('username')?.touched">
+                    Required.<br>
+                  </small>
+                </div>
+              <div class="form-group">
+                <label for="inputPassword">Password</label>
+                <input type="password" class="form-control" [formControlName]="'password'" id="inputPassword">
+                <small *ngIf="!loginForm.get('password')?.valid && loginForm.get('password')?.touched">
+                  Required.<br>
+                </small>
+              </div>
+              <div type="submit" class="text-center">
+                <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
+            </div>
+          </form>
       </div>
-    </form>
+  </div>
+  <div class="smallColumn"></div>
 </div>
