--- a/angular-JavaLearn/src/app/home/home.component.html
+++ b/angular-JavaLearn/src/app/home/home.component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-    <div class="column"></div>
+    <div class="smallColumn"></div>
 </div>
 <div class="end">
     <div class="row"></div>
