admin controller and service created

--- a/angular-JavaLearn/src/app/admin/menu/menu.component.html
+++ b/angular-JavaLearn/src/app/admin/menu/menu.component.html
@@ -7,8 +7,8 @@
             <div class="column">
                 <div class="row">
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button" routerLink="/userslist">List users</button>
-                        <button class="btn btn-primary" type="button" routerLink="/profile">Create new course</button>
+                        <button class="btn btn-secondary" type="button" routerLink="/userslist">List users</button>
+                        <button class="btn btn-secondary" type="button" routerLink="/profile">Create new course</button>
                     </div>
                 </div>
             </div>
