completed delete and get users in admin controller

--- a/angular-JavaLearn/src/app/admin/menu/menu.component.html
+++ b/angular-JavaLearn/src/app/admin/menu/menu.component.html
@@ -7,7 +7,7 @@
             <div class="column">
                 <div class="row">
                     <div class="d-grid gap-2">
-                        <button class="btn btn-secondary" type="button" routerLink="/userslist">List users</button>
+                        <button class="btn btn-secondary" type="button" routerLink="/admin/users">List users</button>
                         <button class="btn btn-secondary" type="button" routerLink="/profile">Create new course</button>
                     </div>
                 </div>
