added role enum, update auth service to changed endpoints, refactored observing currentUser

--- a/angular-JavaLearn/src/app/admin/users/users.component.html
+++ b/angular-JavaLearn/src/app/admin/users/users.component.html
@@ -3,6 +3,6 @@
       Id: {{user.id}}, Name: {{user.username}}, password: {{user.password}},
       email: {{user.email}},
       enabled: {{user.enabled}},
-      admin: {{user.admin}}
+      role: {{user.role}}
     </li>
 </ul>
