--- a/angular-JavaLearn/src/app/components/header/header.component.html
+++ b/angular-JavaLearn/src/app/components/header/header.component.html
@@ -11,14 +11,13 @@
       </div>
       <div class="navbar-nav" *ngIf="currentUser?.id">
         <div *ngIf="!isAdmin">
-          <a class="nav-link active navbtn" routerLink="/profile">{{currentUser.username}}</a>
+          <a class="nav-link active navbtn" (click)=profile() >{{currentUser.username}}</a>
         </div>
         <div *ngIf="isAdmin">
           <a class="nav-link active navbtn" routerLink="/admin">{{currentUser.username}}</a>
         </div>
         <a class="nav-link active navbtn" routerLink="/courses">Courses</a>
         <a class="nav-link active navbtn" (click)="logout()">Logout</a>
-        <a class="nav-link active navbtn" >admin: {{isAdmin()}}</a>
       </div>
     </div>
   </div>
