--- a/angular-JavaLearn/src/app/components/header/header.component.html
+++ b/angular-JavaLearn/src/app/components/header/header.component.html
@@ -10,14 +10,14 @@
         <a class="nav-link active navbtn" href="/login">Login</a>
       </div>
       <div class="navbar-nav" *ngIf="currentUser?.id">
-        <div *ngIf="!isAdmin">
-          <a class="nav-link active navbtn" (click)=profile() >{{currentUser.username}}</a>
+        <div *ngIf="!isAdmin()">
+          <a class="nav-link active navbtn clickable" (click)="profile()">{{currentUser.username}}</a>
         </div>
-        <div *ngIf="isAdmin">
+        <div *ngIf="isAdmin()">
           <a class="nav-link active navbtn" routerLink="/admin">{{currentUser.username}}</a>
         </div>
         <a class="nav-link active navbtn" routerLink="/courses">Courses</a>
-        <a class="nav-link active navbtn" (click)="logout()">Logout</a>
+        <a class="nav-link active navbtn clickable" (click)="logout()">Logout</a>
       </div>
     </div>
   </div>
