added user verification modal and deleting account for user and accounts for admin

--- a/angular-JavaLearn/src/app/pages/profile/profile.component.html
+++ b/angular-JavaLearn/src/app/pages/profile/profile.component.html
@@ -11,26 +11,14 @@
                 <p><strong>Email: </strong>{{user?.email}}</p>
                 <p><strong>Enabled: </strong>{{user?.enabled}}</p>
                 <p><strong>Role: </strong>{{user?.role}}</p>
-                <!-- <button class="btn btn-warning" (click)="delete()">Delete account</button> -->
-                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModal">Delete account</button>
+                <div *ngIf="isAdmin()">
+                    <button class="btn btn-warning" (click)="delete()">Delete account</button>
+                </div>
+                <div *ngIf="!isAdmin()">
+                    <app-modal></app-modal>
+                </div>
             </div>
         </div>
-
-         <!-- The Modal -->
-        <div class="modal" id="myModal"  #content>
-            <div class="modal-dialog">
-            <div class="modal-content">
-            
-                <!-- Modal Header -->
-                <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                
-                <!-- Modal body -->
-                <div class="modal-body">
-                Modal body..
-                </div>
 
     </div>
 </div>
