--- a/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
@@ -1,18 +1,26 @@
 <div class="row">
     <div class="smallColumn"></div>
     <div class="column">
-        <h4>Admin panel</h4>
-        <div class="row">
-            <div class="smallColumn"></div>
-            <div class="column">
-                <div class="row">
-                    <div class="d-grid gap-2">
-                        <button class="btn btn-secondary" type="button" routerLink="/admin/users">List users</button>
-                        <button class="btn btn-secondary" type="button" routerLink="/profile">Create new course</button>
+        <div class="pt-5">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Admin panel</h3>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="smallColumn"></div>
+                        <div class="column">
+                            <div class="row">
+                                <div class="d-grid gap-2">
+                                    <button class="btn btn-secondary" type="button" routerLink="/admin/users">List users</button>
+                                    <button class="btn btn-secondary" type="button" routerLink="/admin/maker">Create new course</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="smallColumn"></div>
                     </div>
                 </div>
             </div>
-            <div class="smallColumn"></div>
         </div>
     </div>
     <div class="smallColumn"></div>
