--- a/angular-JavaLearn/src/styles.css
+++ b/angular-JavaLearn/src/styles.css
@@ -3,9 +3,9 @@
     margin-top: 10px;
 }
 
-input.ng-invalid.ng-touched {
+/* input.ng-invalid.ng-touched {
     border: 1px solid red;
-}
+} */
 
 h4 {
     margin-top: 20px;
