added creating courses from admin panel

--- a/angular-JavaLearn/src/app/components/delete-account-modal/delete-account-modal.component.html
+++ b/angular-JavaLearn/src/app/components/delete-account-modal/delete-account-modal.component.html
@@ -20,9 +20,9 @@
             Required.<br>
           </small>
         </div>
-        <div type="submit" class="text-center">
-          <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
-      </div>
+        <div type="submit" class="text-center topMargin">
+          <button mat-raised-button [disabled]="loginForm.invalid">Submit</button>
+        </div>
     </form>
    </div>
    <div class="modal-footer">
