--- a/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
@@ -7,18 +7,10 @@
                     <h3>Admin panel</h3>
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="smallColumn"></div>
-                        <div class="column">
-                            <div class="row">
-                                <div class="d-grid gap-2">
-                                    <button class="btn btn-secondary" type="button" routerLink="/admin/users">List users</button>
-                                    <button class="btn btn-secondary" type="button" routerLink="/admin/maker">Create new course</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="smallColumn"></div>
-                    </div>
+                    <div class="d-grid gap-2">
+                        <button mat-raised-button routerLink="/admin/users">List users</button>
+                        <button mat-raised-button routerLink="/admin/maker">Create new course</button>
+                    </div>   
                 </div>
             </div>
         </div>
