--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/quiz-page/quiz-page.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/quiz-page/quiz-page.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="quizForm" (ngSubmit)="savePage()">
   
-    <div class="courseMakerHeader addMargin" formGroupName="quizDetails">
+    <div class="course-maker-header addMargin" formGroupName="quizDetails">
       <mat-form-field appearance="standard">
         <mat-label>Quiz title</mat-label>
         <input matInput formControlName="quizTitle" (focusout)="savePage()">
