--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/text-page/text-page.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/text-page/text-page.component.html
@@ -1,6 +1,6 @@
 <div class="addMargin">
     <form [formGroup]="textForm" (ngSubmit)="savePage()">
-        <div class="courseMakerHeader">
+        <div class="course-maker-header">
             <mat-form-field appearance="standard">
                 <mat-label>Page title</mat-label>
                 <input matInput formControlName="pageTitle" (focusout)="savePage()">
