--- a/angular-JavaLearn/src/app/pages/admin/users/users.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/users/users.component.html
@@ -23,7 +23,7 @@
                 <td>{{user.role}}</td>
                 <td>{{user.enabled}}</td>
                 <td>
-                  <button class="btn btn-info" (click)=detail(user)>Details</button>
+                  <button mat-raised-button color="primary" (click)=detail(user)>Details</button>
                 </td>
               </tr>
             </tbody>
