--- a/angular-JavaLearn/src/app/pages/auth/login/login.component.html
+++ b/angular-JavaLearn/src/app/pages/auth/login/login.component.html
@@ -4,22 +4,22 @@
       <h4>Login</h4>
       <div class="row">
           <form [formGroup]="loginForm" (ngSubmit)="login()">
-              <div class="form-group">
+              <div class="form-group auth">
                   <label for="inputUsername">Username</label>
                   <input type="text" class="form-control" [formControlName]="'username'" id="inputUsername" aria-describedby="username">
                   <small *ngIf="!loginForm.get('username')?.valid && loginForm.get('username')?.touched">
                     Required.<br>
                   </small>
                 </div>
-              <div class="form-group">
+              <div class="form-group auth">
                 <label for="inputPassword">Password</label>
                 <input type="password" class="form-control" [formControlName]="'password'" id="inputPassword">
                 <small *ngIf="!loginForm.get('password')?.valid && loginForm.get('password')?.touched">
                   Required.<br>
                 </small>
               </div>
-              <div type="submit" class="text-center">
-                <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
+              <div type="submit" class="text-center topMargin">
+                <button mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
             </div>
           </form>
       </div>
