--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/coding-page/coding-page.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/coding-page/coding-page.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="codeForm" (ngSubmit)="savePage()">
-    <div class="courseMakerHeader addMargin">
+    <div class="course-maker-header addMargin">
       <mat-form-field appearance="standard">
         <mat-label>Page title</mat-label>
         <input matInput formControlName="pageTitle">
       </mat-form-field>
-      <mat-icon class="add-btn" (click)="addCodeGroup(); savePage()">add</mat-icon>
+      <mat-icon class="add-btn clickable" (click)="addCodeGroup(); savePage()">add</mat-icon>
     </div>
 
     <ng-container formArrayName="codeGroups">
@@ -17,7 +17,7 @@
                 <mat-option value="code">Code</mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-icon class="delete-btn" (click)="deleteCodeGroup(i); savePage()">delete_forever</mat-icon>
+        <mat-icon class="delete-btn clickable" (click)="deleteCodeGroup(i); savePage()">delete_forever</mat-icon>
         <textarea class="form-control" formControlName="text" rows="5" (focusout)="savePage()" (keydown)="handleKeydown($event)"></textarea>
         <hr />
       </div>
