--- a/angular-JavaLearn/src/app/pages/auth/signup/signup.component.html
+++ b/angular-JavaLearn/src/app/pages/auth/signup/signup.component.html
@@ -4,7 +4,7 @@
       <h4>Register</h4>
       <div class="row">
           <form [formGroup]="signupForm" (ngSubmit)="signup()">
-              <div class="form-group">
+              <div class="form-group auth">
                   <label for="inputUsername">Username</label>
                   <input type="text" class="form-control" [formControlName]="'username'" id="username">
                   <small *ngIf="!signupForm.get('username')?.valid && signupForm.get('username')?.touched">
@@ -12,7 +12,7 @@
                   </small>
                   <small class="form-text text-muted">You will appear under this name.</small>
                 </div>
-                <div class="form-group">
+                <div class="form-group auth">
                   <label for="inputEmail">Email address</label>
                   <input type="text" class="form-control" [formControlName]="'email'" id="email" aria-describedby="email">
                   <small *ngIf="!signupForm.get('email')?.valid && signupForm.get('email')?.touched">
@@ -20,7 +20,7 @@
                   </small>
                   <small class="form-text text-muted">We will not spam you.</small>
                 </div>
-                <div class="form-group">
+                <div class="form-group auth">
                   <label for="inputPassword">Password</label>
                   <input type="password" class="form-control" [formControlName]="'password'" id="password">
                   <small *ngIf="!signupForm.get('password')?.valid && signupForm.get('password')?.touched">
@@ -29,7 +29,7 @@
                   <small class="form-text text-muted">Something super secure.</small>
                 </div>
                 <div type="submit" class="text-center" >
-                    <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">Submit</button>
+                    <button mat-raised-button color="primary" [disabled]="signupForm.invalid">Submit</button>
                 </div>
             </form>
       </div>
