--- a/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/adminMenu/adminMenu.component.html
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <div class="d-grid gap-2">
                         <button mat-raised-button routerLink="/admin/users">List users</button>
-                        <button mat-raised-button routerLink="/admin/maker">Create new course</button>
+                        <button mat-raised-button routerLink="/admin/maker">Course maker</button>
                     </div>   
                 </div>
             </div>
