--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/courseMaker.component.css
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/courseMaker.component.css
@@ -1,4 +1,4 @@
-.card-header {
+mat-card-actions, .card-header  {
     display:flex;
     align-items: center;
     justify-content: space-evenly;
@@ -12,6 +12,6 @@
 }
 
 .course-card {
-    min-width: 400px;
+    min-width: 350px;
 }
   
