--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/courseMaker.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/courseMaker.component.html
@@ -8,16 +8,16 @@
         <div class="card-body">
           <div *ngFor="let course of courseList; index as i">
             <mat-card class="course-card">
-              <mat-card-subtitle>Course</mat-card-subtitle>
+              <mat-card-subtitle>Course id: {{ course.id }}</mat-card-subtitle>
               <mat-card-title>{{course.title}}</mat-card-title>
               <mat-card-content>
-                <p>Course id: {{ course.id }}</p>
                 <p>{{ course.description }}</p>
               </mat-card-content>
               <mat-divider inset></mat-divider>
               <mat-card-actions>
-                <button mat-button>EDIT</button>
-                <button mat-button (click)="delete(course.id)" >DELETE</button>
+                <app-make-course-modal [updateCourse]="course.id" [title]="course.title" [description]="course.description"></app-make-course-modal>
+                <button mat-button routerLink="/admin/maker/manager">PAGES</button>
+                <button mat-button (click)="delete(course.id)">DELETE</button>
               </mat-card-actions>
               <mat-card-footer>
                 
