working on pages backend service and frontend pagemaker

--- a/angular-JavaLearn/src/app/components/make-course-modal/make-course-modal.component.html
+++ b/angular-JavaLearn/src/app/components/make-course-modal/make-course-modal.component.html
@@ -21,7 +21,7 @@
          <textarea class="form-control" formControlName="description" rows="7" (keydown)="handleKeydown($event)"></textarea>
          </div>
          <div type="submit" class="text-center topMargin">
-            <button mat-raised-button [disabled]="createModalForm.invalid">Submit</button>
+            <button mat-raised-button color="primary" [disabled]="createModalForm.invalid">Submit</button>
          </div>
       </form>
    </div>
