--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.html
@@ -2,6 +2,30 @@
   <div class="pt-5">
     <div class="card">
       <div class="card-header">
+      </div>
+      <div class="card-body">
+        <div *ngFor="let page of pageList; index as i">
+          <mat-card class="course-card">
+            <mat-card-subtitle>Page</mat-card-subtitle>
+            <mat-card-title>{{page.name}}</mat-card-title>
+            <mat-card-content>
+              <!-- <p>Order: {{ page.order }}</p> -->
+            </mat-card-content>
+            <mat-divider inset></mat-divider>
+            <mat-card-actions>
+              <button mat-button (click)="delete(page.id)">DELETE</button>
+            </mat-card-actions>
+            <mat-card-footer>
+              
+            </mat-card-footer>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pt-5">
+    <div class="card">
+      <div class="card-header">
         <app-preview-modal></app-preview-modal>
         <mat-button-toggle-group #group="matButtonToggleGroup" [(ngModel)]="pageType">
             <mat-button-toggle value="text" #textBtn>Text page</mat-button-toggle>
@@ -12,7 +36,7 @@
       <div class="card-body" >
 
           <div *ngIf="textBtn.checked">
-            <app-text-page></app-text-page>
+            <app-text-page [courseId]="course.id"></app-text-page>
           </div>
 
           <div *ngIf="quizBtn.checked">
