deleting page from course now works

--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.css
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.css
@@ -3,3 +3,10 @@
     align-items: center;
     justify-content: space-evenly;
 }
+
+.page-list {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px 20px;
+}
