--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/text-page/text-page.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/text-page/text-page.component.html
@@ -3,10 +3,10 @@
         <div class="course-maker-header">
             <mat-form-field appearance="standard">
                 <mat-label>Page name</mat-label>
-                <input matInput formControlName="pageName" (focusout)="savePage()">
+                <input matInput formControlName="pageName" (focusout)="saveForPreview()">
             </mat-form-field>
             <label for="textPage">Text:</label>
-            <textarea class="form-control" formControlName="text" rows="15" (focusout)="savePage()" (keydown)="handleKeydown($event)"></textarea>
+            <textarea class="form-control" formControlName="text" rows="15" (focusout)="saveForPreview()" (keydown)="handleKeydown($event)"></textarea>
         </div>
         <div class="text-center topMargin">
             <button mat-raised-button color="primary" [disabled]="textForm.invalid">Submit</button>
