--- a/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.html
+++ b/angular-JavaLearn/src/app/pages/admin/courseMaker/page-maker/page-maker.component.html
@@ -1,27 +1,25 @@
 <div class="container">
   <div class="pt-5">
-    <div class="card">
-      <div class="card-header">
-      </div>
-      <div class="card-body">
-        <div *ngFor="let page of pageList; index as i">
-          <mat-card class="course-card">
-            <mat-card-subtitle>Page</mat-card-subtitle>
-            <mat-card-title>{{page.name}}</mat-card-title>
-            <mat-card-content>
-              <!-- <p>Order: {{ page.order }}</p> -->
-            </mat-card-content>
-            <mat-divider inset></mat-divider>
-            <mat-card-actions>
-              <button mat-button (click)="delete(page.id)">DELETE</button>
-            </mat-card-actions>
-            <mat-card-footer>
-              
-            </mat-card-footer>
-          </mat-card>
-        </div>
+    <div ng-show="!pageList.length" class="card-body page-list">
+      <div *ngFor="let page of pageList; index as i">
+        <mat-card class="course-card">
+          <mat-card-subtitle>{{page.type | titlecase}}</mat-card-subtitle>
+          <mat-card-title>{{page.name}}</mat-card-title>
+          <mat-card-content>
+            <p>In order: {{ page.pageOrder}}</p>
+          </mat-card-content>
+          <mat-divider inset></mat-divider>
+          <mat-card-actions>
+            <button mat-button (click)="delete(page.id)">DELETE</button>
+            <button mat-button (click)="update(page)">UPDATE</button>
+          </mat-card-actions>
+          <mat-card-footer>
+            
+          </mat-card-footer>
+        </mat-card>
       </div>
     </div>
+    {{pageList | json}}
   </div>
   <div class="pt-5">
     <div class="card">
